...
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:layout_marginEnd="23dp"

            android:layout_marginRight="20dp"
            android:id="@+id/settings"
            android:layout_toLeftOf="@+id/imageView2"
            android:layout_toStartOf="@+id/imageView2"
            android:src="@drawable/ic_settings_black_24dp" />

        <ImageView
            android:id="@+id/info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_info_outline_black_24dp" />
        <ImageView
            android:id="@+id/messages"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
...
