<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FF9900"

    android:layout_height="match_parent"
    tools:context="com.example.adrian.firebase.LoginEmployee">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="566dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/bones" />



        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/loginedittext"
            android:hint="email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColorHint="#ffffff"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#ffffff" />




        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#ffffff"
            android:background="@drawable/loginedittext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#ffffff" />
        />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="310dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ro"
            android:layout_marginBottom="20dp"
            android:text="@string/text_login" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ButtonRegister"
            android:layout_width="310dp"
           android:layout_gravity="center"
            android:layout_height="40dp"
            android:background="@drawable/ro"

            android:layout_marginBottom="20dp"
            android:text="Register" />

        <TextView
            android:id="@+id/Signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="Forgot Password?"
            android:textSize="16dp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <include
        layout="@layout/content_login_employer"
        android:layout_width="391dp"
        android:layout_height="514dp"
        tools:layout_editor_absoluteX="-7dp" />



</android.support.design.widget.CoordinatorLayout>
